--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </div>
     <p>Okay here we go
     </p>
-    <p></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, iure commodi porro voluptatibus debitis suscipit deserunt temporibus optio illo corrupti. Accusantium itaque molestiae, soluta sapiente iure voluptatibus tempore perferendis? Magni.</p>
   </body>
 </html>
